--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <h1>Mozilla Dev - My To Do List</h1>
+  <h1>João 226747 Victor Ornelas</h1>
   <input class="lg-text-input" #campoNovoItem (keyup.enter)="CREATE_tarefa(campoNovoItem.value);campoNovoItem.value=''" />
   <button class="btn-primary" (click)="CREATE_tarefa(campoNovoItem.value); campoNovoItem.value=''">
   Adicionar Tarefa</button>
